db name fixed / refresh after adding / edit modified / box add scrollbar

--- a/assets/css/alert.css
+++ b/assets/css/alert.css
@@ -7,4 +7,10 @@
    height: 90%;
    width: 40%;
    padding: 20px;
+   overflow-y: scroll;
+}
+
+::-webkit-scrollbar {
+   width: 0px;
+   background: transparent;
 }
